# Dpp-Webhook-Ingestion-Script

./: .env  .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: Cleantron - Webhook - DPP.postman_collection.json
examples/: activate_payload.json  create_payload.json  payload.json  update_payload.json
src/dpp_webhook/: __init__.py  cli.py  client.py  connection.py  flows.py  signing.py  ui.py
tests/: test_connection.py  test_signing.py
