[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dpp-webhook-ingestion"
version = "0.1.0"
description = "Generate signed DPP webhook payloads and send them to an ingestion endpoint."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DPP Webhook Ingestion" }]

[project.scripts]
dpp-webhook = "dpp_webhook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
